# Vida

./: .gitignore  README.md  SensorDatasRecord.txt
Ros/install/: local_setup.sh  setup.sh
Ros/install/control_pkg/lib/control_pkg/: record  remote_control
Ros/install/control_pkg/share/ament_index/resource_index/parent_prefix_path/: control_pkg
Ros/install/control_pkg/share/control_pkg/: local_setup.sh  package.sh
Ros/install/vida_interfaces/share/vida_interfaces/: local_setup.sh  package.sh
Ros/log/: latest_build
Ros/src/control_pkg/: CMakeLists.txt  package.xml
Ros/src/control_pkg/src/Record/: Record.cpp
Ros/src/control_pkg/src/RemoteControlPublisher/: RemoteControlPublisher.cpp  RemoteControlPublisher.h
Ros/src/vida_interfaces/: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/RemoteControl/lib/RemoteControl/: remote_control
install/RemoteControl/share/RemoteControl/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vida_interfaces/share/vida_interfaces/: local_setup.sh  package.sh
log/: latest_build
src/RemoteControl/: CMakeLists.txt  package.xml
src/RemoteControl/src/RemoteControlPublisher/: RemoteControlPublisher.cpp  RemoteControlPublisher.h
src/vida_interfaces/: package.xml
